--- a/app/src/main/res/layout/activity_team_home.xml
+++ b/app/src/main/res/layout/activity_team_home.xml
@@ -258,8 +258,7 @@
             android:layout_width="121dp"
             android:layout_height="91dp"
             android:layout_marginVertical="13dp"
-            app:srcCompat="@drawable/codenamealpha"
-            tools:srcCompat="@drawable/red" />
+            app:srcCompat="@drawable/red" />
 
         <TextView
             android:id="@+id/playernum1"
